# y86-pipe-rs

./: .gitignore  Cargo.toml  README.md
assets/: hcl-rs.typ
binutils/: Cargo.toml
binutils/src/: lib.rs
binutils/tests/: test_log.rs
debugger/: Cargo.toml  README.md
debugger/src/: lib.rs  main.rs  server.rs
hcl_macro/: Cargo.toml
hcl_macro/src/: expr.rs  items.rs  lib.rs
sim/: Cargo.toml  README.md
sim/src/: dsl.rs  isa.rs  lib.rs  main.rs  object.rs  pipeline.rs  propagate.rs  utils.rs
sim/src/architectures/: hardware_full.rs  hardware_pipe.rs  hardware_seq.rs  hardware_seq_plus.rs  hardware_stupid.rs  mod.rs  pipe_invalid.rs  pipe_stupid.rs  seq_std.rs
sim/src/architectures/builtin/: mod.rs  pipe_std.rs  seq_plus_std.rs  seq_std.rs
sim/src/architectures/extra/: mod.rs  pipe_stupid.rs
sim/src/architectures/invalid/: circular_dep.rs  mod.rs  unused_unit_in.rs
sim/src/asm/: grammer.pest  mod.rs
sim/src/framework/: mod.rs  propagate.rs
sim/src/pipeline/: hardware.rs  mod.rs  propagate.rs
sim/src/test/: diff.rs  inst.rs  mod.rs
sim/src/webapp/: info.rs  mod.rs
sim/tests/: optest.rs
sim_macro/src/: items.rs  lib.rs
src/: asm.rs  bin.rs  dsl.rs  isa.rs  lib.rs  main.rs  object.rs  parse.rs  pipeline.rs  record.rs
src/asm/: grammer.pest  mod.rs
src/parse/: grammer.pest  mod.rs
src/pipeline/: hardware.rs  mod.rs  pipe_full.rs
src/webapp/: README.md  error.rs  info.rs  mod.rs
